# Odre

./: .gitignore  README.md  build-ci.js  build-release.js  bump-and-push.js  copy-build-output.js  inject-updater-key.js  package-lock.json  package.json  publish-update.js  update.json
.agents/skills/gstack-autoplan/: SKILL.md
.agents/skills/gstack-benchmark/: SKILL.md
.agents/skills/gstack-browse/: SKILL.md
.agents/skills/gstack-canary/: SKILL.md
.agents/skills/gstack-connect-chrome/: SKILL.md
.agents/skills/gstack-cso/: SKILL.md
.agents/skills/gstack-design-consultation/: SKILL.md
.agents/skills/gstack-design-review/: SKILL.md
.agents/skills/gstack-document-release/: SKILL.md
.agents/skills/gstack-investigate/: SKILL.md
.agents/skills/gstack-land-and-deploy/: SKILL.md
.agents/skills/gstack-office-hours/: SKILL.md
.agents/skills/gstack-plan-ceo-review/: SKILL.md
.agents/skills/gstack-plan-design-review/: SKILL.md
.agents/skills/gstack-plan-eng-review/: SKILL.md
.agents/skills/gstack-qa/: SKILL.md
.agents/skills/gstack-qa-only/: SKILL.md
.agents/skills/gstack-retro/: SKILL.md
.agents/skills/gstack-review/: SKILL.md
.agents/skills/gstack-setup-browser-cookies/: SKILL.md
.agents/skills/gstack-setup-deploy/: SKILL.md
.agents/skills/gstack-ship/: SKILL.md
.github/workflows/: release.yml
src/: app.js  index.html  style.css
src-tauri/: Cargo.toml  generate_installer_assets.ps1  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
