[package]
name = "Odre"
version = "0.1.11"
description = "Odre - Make Folder Sexy Again"
authors = ["Odre"]
edition = "2021"

[lib]
name = "odre_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "Odre"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon", "image-png"] }
tauri-plugin-autostart = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-shell = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "6"
dirs = "5"
tokio = { version = "1", features = ["full"] }
glob = "0.3"
log = "0.4"
env_logger = "0.11"
tauri-plugin-updater = "2.10.0"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
